# model_surfacing_template

./: .gitignore  ANALYSIS.md  DESIGN.md  Dockerfile  INSTRUCTIONS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
app/: main.py  model.py  model_.py  schemas.py  settings.py
app/endpoints/: endpoints.py  mcqa_endpoints.py
app/models/: mcqa_model.py  model_loader.py
app/schemas/: schemas.py
docker/: Dockerfile
ml_service/: endpoints.py  main.py
notebooks/: Train_MCQA_Model.ipynb
tests/: test_integration_mcqa_endpoints.py  test_mcqa_model.py
tests/unit/ml_service/: test_endpoints.py
utils/: logger.py
