[project]
name = "MCQA"
version = "0.1.0"
description = "Application supporting the hosting of the MCQA model"
authors = [
    { name = "Jordan Wiseman", email = "jordanmarkwiseman@gmail.com" }
]
requires-python = ">=3.10"

dependencies = [
    "uvicorn>=0.31.0,<0.32.0",
    "fastapi>=0.115.0,<0.116.0",
    "pydantic-settings>=2.5.2,<2.6.0",
    "pydantic>=2.9.2,<2.10.0",
    "spacy>=3.8.2,<3.9.0",
    "torch>=2.8.0",
    "transformers>=4.56.2",
    "pathlib>=1.0.1",
    "mlflow>=3.4.0",
    "pytest>=8.3.5",
    "mock>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.*"
]

[tool.pytest.ini_options]
python_functions = ["test_*"]
